[package]
name = "rhino"
version = "0.0.2"
authors = ["Markus Westerlind <marwes91@gmail.com>"]

[[bin]]
name = "rhino"
test = false
bench = false

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
getopts = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3.15"


[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
